--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,4 +23,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #1C1C1C;
 }
